signup/signin componenet created

--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -87,6 +87,9 @@
 }
 
 @media screen and (max-width: 600px) {
+  .products {
+    margin: auto 1rem;
+  }
   .filterBox {
     width: 20vmax;
     position: static;
